--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "highcharts-angular": "^5.1.0",
     "ngxtension": "^5.1.0",
     "postcss": "^8.5.6",
+    "primeicons": "^7.0.0",
     "primeng": "^20.0.1",
     "rxjs": "~7.8.2",
     "tailwindcss": "^4.1.11",
+    "tailwindcss-primeui": "^0.6.1",
     "tslib": "^2.8.1"
   },
   "devDependencies": {
