--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "^20.1.6",
     "@angular/platform-browser-dynamic": "^20.1.6",
     "@angular/router": "^20.1.6",
+    "@ngrx/signals": "^20.0.0",
     "@primeuix/themes": "^1.2.3",
     "@tailwindcss/postcss": "^4.1.11",
     "highcharts-angular": "^5.1.0",
